// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManualDeviceKeyVerificationDialog should display the device 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_QuestionDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header mx_Dialog_headerWithCancel"
    >
      <h2
        class="mx_Heading_h2 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Verify session
      </h2>
      <div
        aria-label="Close dialog"
        class="mx_AccessibleButton mx_Dialog_cancelButton"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="mx_Dialog_content"
      id="mx_Dialog_content"
    >
      <div>
        <p>
          Confirm by comparing the following with the User Settings in your other session:
        </p>
        <div
          class="mx_DeviceVerifyDialog_cryptoSection"
        >
          <ul>
            <li>
              <label>
                Session name
                :
              </label>
               
              <span>
                my device
              </span>
            </li>
            <li>
              <label>
                Session ID
                :
              </label>
               
              <span>
                <code>
                  XYZ
                </code>
              </span>
            </li>
            <li>
              <label>
                Session key
                :
              </label>
               
              <span>
                <code>
                  <b>
                    ABCD EFGH
                  </b>
                </code>
              </span>
            </li>
          </ul>
        </div>
        <p>
          If they don't match, the security of your communication may be compromised.
        </p>
      </div>
    </div>
    <div
      class="mx_Dialog_buttons"
    >
      <span
        class="mx_Dialog_buttons_row"
      >
        <button
          data-testid="dialog-cancel-button"
          type="button"
        >
          Cancel
        </button>
        <button
          class="mx_Dialog_primary"
          data-testid="dialog-primary-button"
          type="button"
        >
          Verify session
        </button>
      </span>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`ManualDeviceKeyVerificationDialog should display the device of another user 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_QuestionDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header mx_Dialog_headerWithCancel"
    >
      <h2
        class="mx_Heading_h2 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Verify session
      </h2>
      <div
        aria-label="Close dialog"
        class="mx_AccessibleButton mx_Dialog_cancelButton"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="mx_Dialog_content"
      id="mx_Dialog_content"
    >
      <div>
        <p>
          Confirm this user's session by comparing the following with their User Settings:
        </p>
        <div
          class="mx_DeviceVerifyDialog_cryptoSection"
        >
          <ul>
            <li>
              <label>
                Session name
                :
              </label>
               
              <span>
                my device
              </span>
            </li>
            <li>
              <label>
                Session ID
                :
              </label>
               
              <span>
                <code>
                  XYZ
                </code>
              </span>
            </li>
            <li>
              <label>
                Session key
                :
              </label>
               
              <span>
                <code>
                  <b>
                    ABCD EFGH
                  </b>
                </code>
              </span>
            </li>
          </ul>
        </div>
        <p>
          If they don't match, the security of your communication may be compromised.
        </p>
      </div>
    </div>
    <div
      class="mx_Dialog_buttons"
    >
      <span
        class="mx_Dialog_buttons_row"
      >
        <button
          data-testid="dialog-cancel-button"
          type="button"
        >
          Cancel
        </button>
        <button
          class="mx_Dialog_primary"
          data-testid="dialog-primary-button"
          type="button"
        >
          Verify session
        </button>
      </span>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
